# sofa

./: CMakeLists.txt
Sofa/Component/: CMakeLists.txt
Sofa/Component/LinearSystem/: CMakeLists.txt
Sofa/Component/LinearSystem/src/sofa/component/linearsystem/: AssemblingMatrixSystem.h  AssemblingMatrixSystem.inl  BlockTypeDeducerLocalMatrix.h  BlockTypeDeducerLocalMatrix.inl  CSRMatrixBuilderFromOrderedRows.cpp  CSRMatrixBuilderFromOrderedRows.h  ConstantSparsityPatternSystem.cpp  ConstantSparsityPatternSystem.h  IndirectAssemblingLocalMatrix.cpp  IndirectAssemblingLocalMatrix.h  IndirectAssemblingLocalMatrix.inl  IndirectAssemblingMatrixSystem.cpp  IndirectAssemblingMatrixSystem.h  IndirectAssemblingMatrixSystem.inl  LinearSystemData.h  MappingGraph.cpp  MappingGraph.h  MatrixLinearSystem.h  MatrixLinearSystem.inl  MatrixMapping.h  TypedMatrixLinearSystem.h  TypedMatrixLinearSystem.inl  config.h.in  init.cpp
Sofa/Component/LinearSystem/src/sofa/component/linearsystem/matrixaccumulators/: AssemblingMappedMatrixAccumulator.h  AssemblingMatrixAccumulator.h  BaseAssemblingMatrixAccumulator.h  ConstantLocalMappedMatrix.h  ConstantLocalMatrix.h  SparsityPatternLocalMappedMatrix.h  SparsityPatternLocalMatrix.h
Sofa/Component/LinearSystem/src/sofa/component/linearsystem/visitors/: AssembleGlobalVectorFromLocalVectorVisitor.h  DispatchFromGlobalVectorToLocalVectorVisitor.h
Sofa/Component/LinearSystem/tests/: CMakeLists.txt  CSRMatrixBuilderFromOrderedRows_test.cpp  ConstantSparsityPatternSystem_test.cpp
Sofa/framework/Core/: CMakeLists.txt
Sofa/framework/FEM/: CMakeLists.txt
Sofa/framework/Helper/: CMakeLists.txt
Sofa/framework/Testing/: CMakeLists.txt  Sofa.TestingConfig.cmake.in
Sofa/framework/Type/: CMakeLists.txt
SofaKernel/modules/Sofa.GL/: CMakeLists.txt
SofaKernel/modules/Sofa.Testing/: CMakeLists.txt
SofaKernel/modules/Sofa.Type/: CMakeLists.txt
SofaKernel/modules/SofaBaseCollision/: CMakeLists.txt
SofaKernel/modules/SofaBaseLinearSolver/: CMakeLists.txt
SofaKernel/modules/SofaBaseMechanics/: CMakeLists.txt
SofaKernel/modules/SofaBaseTopology/: CMakeLists.txt
SofaKernel/modules/SofaBaseUtils/: CMakeLists.txt
SofaKernel/modules/SofaBaseVisual/: CMakeLists.txt
SofaKernel/modules/SofaCore/: CMakeLists.txt
SofaKernel/modules/SofaDefaultType/: CMakeLists.txt
SofaKernel/modules/SofaDeformable/: CMakeLists.txt
SofaKernel/modules/SofaEigen2Solver/: CMakeLists.txt
SofaKernel/modules/SofaEngine/: CMakeLists.txt
SofaKernel/modules/SofaExplicitOdeSolver/: CMakeLists.txt
SofaKernel/modules/SofaHelper/: CMakeLists.txt
SofaKernel/modules/SofaImplicitOdeSolver/: CMakeLists.txt
SofaKernel/modules/SofaLoader/: CMakeLists.txt
cmake/Modules/: Findtaskflow.cmake
examples/Demos/: rigidifiedSectionsInBeam.scn
modules/SofaBoundaryCondition/: CMakeLists.txt
modules/SofaConstraint/: CMakeLists.txt
modules/SofaDenseSolver/: CMakeLists.txt
modules/SofaExporter/: CMakeLists.txt
modules/SofaGeneralAnimationLoop/: CMakeLists.txt
modules/SofaGeneralDeformable/: CMakeLists.txt
modules/SofaGeneralEngine/: CMakeLists.txt
modules/SofaGeneralExplicitOdeSolver/: CMakeLists.txt
modules/SofaGeneralImplicitOdeSolver/: CMakeLists.txt
modules/SofaGeneralLinearSolver/: CMakeLists.txt
modules/SofaGeneralLoader/: CMakeLists.txt
modules/SofaGeneralMeshCollision/: CMakeLists.txt
modules/SofaGeneralObjectInteraction/: CMakeLists.txt
modules/SofaGeneralRigid/: CMakeLists.txt
modules/SofaGeneralSimpleFem/: CMakeLists.txt
modules/SofaGeneralTopology/: CMakeLists.txt
modules/SofaGeneralVisual/: CMakeLists.txt
modules/SofaGraphComponent/: CMakeLists.txt
modules/SofaGuiCommon/: CMakeLists.txt
modules/SofaGuiQt/: CMakeLists.txt
modules/SofaHaptics/: CMakeLists.txt
modules/SofaMiscEngine/: CMakeLists.txt
modules/SofaMiscExtra/: CMakeLists.txt
modules/SofaMiscFem/: CMakeLists.txt
modules/SofaMiscForceField/: CMakeLists.txt
modules/SofaMiscMapping/: CMakeLists.txt
modules/SofaMiscSolver/: CMakeLists.txt
modules/SofaMiscTopology/: CMakeLists.txt
modules/SofaNonUniformFem/: CMakeLists.txt
modules/SofaOpenglVisual/: CMakeLists.txt
modules/SofaPreconditioner/: CMakeLists.txt
modules/SofaSparseSolver/: CMakeLists.txt
modules/SofaTopologyMapping/: CMakeLists.txt
modules/SofaUserInteraction/: CMakeLists.txt
modules/SofaValidation/: CMakeLists.txt
(+484 files in other folders)
