cmake_minimum_required(VERSION 3.12)
project(Sofa.Component.LinearSystem LANGUAGES CXX)

set(SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR "src/sofa/component/linearsystem")

set(HEADER_FILES
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/init.h
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/AssemblingMatrixSystem.h
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/AssemblingMatrixSystem.inl
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/BlockTypeDeducerLocalMatrix.h
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/BlockTypeDeducerLocalMatrix.inl
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/ConstantSparsityPatternSystem.h
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/IndirectAssemblingLocalMatrix.h
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/IndirectAssemblingLocalMatrix.inl
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/IndirectAssemblingMatrixSystem.h
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/IndirectAssemblingMatrixSystem.inl
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/LinearSystemData.h
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/MappingGraph.h
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/MatrixFreeSystem.h
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/MatrixLinearSystem.h
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/MatrixLinearSystem.inl
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/MatrixMapping.h
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/CompositeLinearSystem.h
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/CompositeLinearSystem.inl
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/config.h.in

    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/matrixaccumulators/AssemblingMappedMatrixAccumulator.h
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/matrixaccumulators/AssemblingMatrixAccumulator.h
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/matrixaccumulators/BaseAssemblingMatrixAccumulator.h
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/matrixaccumulators/ConstantLocalMappedMatrix.h
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/matrixaccumulators/ConstantLocalMatrix.h
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/matrixaccumulators/SparsityPatternLocalMappedMatrix.h
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/matrixaccumulators/SparsityPatternLocalMatrix.h

    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/visitors/AssembleGlobalVectorFromLocalVectorVisitor.h
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/visitors/DispatchFromGlobalVectorToLocalVectorVisitor.h
)

set(SOURCE_FILES
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/init.cpp
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/AssemblingMatrixSystem.cpp
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/ConstantSparsityPatternSystem.cpp
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/IndirectAssemblingLocalMatrix.cpp
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/IndirectAssemblingMatrixSystem.cpp
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/MappingGraph.cpp
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/MatrixLinearSystem.cpp
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/CompositeLinearSystem.cpp

    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/visitors/AssembleGlobalVectorFromLocalVectorVisitor.cpp
    ${SOFACOMPONENTLINEARSOLVERLINEARSYSTEM_SOURCE_DIR}/visitors/DispatchFromGlobalVectorToLocalVectorVisitor.cpp
)

sofa_find_package(Sofa.Simulation.Core REQUIRED)

add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})
target_link_libraries(${PROJECT_NAME} PUBLIC Sofa.Simulation.Core Sofa.LinearAlgebra)

if (NOT "${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    # Silence attribute warnings (for example, ignored already defined external template)
    target_compile_options(${PROJECT_NAME} PRIVATE -Wno-attributes)
endif()

sofa_create_package_with_targets(
    PACKAGE_NAME ${PROJECT_NAME}
    PACKAGE_VERSION ${Sofa_VERSION}
    TARGETS ${PROJECT_NAME} AUTO_SET_TARGET_PROPERTIES
    INCLUDE_SOURCE_DIR "src"
    INCLUDE_INSTALL_DIR "${PROJECT_NAME}"
)
